<resources>
    <string name="app_name">eCareZone Patient</string>
    <string name="vserion_info">Alpha 01 by eCareZone. 2015</string>

    <string name="alert">Alert</string>

    <!--login-->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button_text">LOGIN</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_for_new_user">For new user</string>
    <string name="login_create_account">CREATE ACCOUNT</string>

    <!--registration-->
    <string name="registration_title">Create your eCareZone account</string>
    <string name="registration_username">@string/login_username</string>
    <string name="registration_password">@string/login_password</string>
    <string name="registration_country">Country:</string>
    <string name="registration_create_account">@string/login_create_account</string>
    <string name="registration_agreement">You agree the terms and privacy policy</string>
    <string name="registration_agreement_you_agree">You agree to our</string>
    <string name="terms">Terms</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="error_user_name">Please enter a valid email address as user name</string>
    <string name="sorry">Sorry</string>
    <string name="is_not_available_right_now">is not available right now,\nplease book a time.</string>
    <string name="your">Your</string>
    <string name="appointment">appointment</string>
    <string name="dr">Dr.</string>
    <string name="with">with</string>
    <string name="call">call</string>
    <string name="has_been_booked">has been booked.</string>
    <string name="time_to_call">Time to call</string>
    <string name="change_date_n_time">Change date&amp;time</string>
    <string name="calcel_appointment">Cancel appointment</string>
    

    <string name="thanks_for_registration">Thanks for creating eCareZone \n account, your future health will \n be under our care!</string>
    <string name="start_to_use">Start to use the service</string>
    <string name="email_to">For any Support with the EcareZone Account,\n  please mail to </string>
    <string name="email_id"><u>Customersupport@Ecarezone.com</u></string>
     <!-- side menu  -->
    <string name="main_profile_title">Profile</string>
    <string name="main_side_menu_home">Home</string>
    <string name="main_side_menu_news">News feed</string>
    <string name="main_side_menu_health">Health status</string>
    <string name="main_side_menu_doctors">Doctors</string>
    <string name="main_side_menu_medication">Medication</string>
    <string name="main_side_menu_health_plan">Health plan</string>
    <string name="main_side_menu_settings">Account Settings</string>
    <string name="main_side_menu_logout">Logout</string>

    <!-- Welcome -->
    <string name="welcome_title">Welcome to eCareZone</string>
    <string name="welcome_message">Your future healthcare are in \n good hands now.</string>
    <string name="welcome_personal_profile">Please take few minutes to \n file your personal information, it \n will make us easy to tailor your \n personal health care.</string>
    <string name="welcome_button_not_now">NOT NOW</string>
    <string name="welcome_button_ok">@android:string/ok</string>
    <string name="welcome_button_cancel">@android:string/cancel</string>

    <!-- News -->
    <string name="news_actionbar_title">News feed</string>

    <!-- Profile -->
    <string name="profile_add_your_profile">Add your profile</string>
    <string name="profile_mine">My profile</string>
    <string name="profile_kid">My daughter profile</string>
    <string name="profile_father">My father profile</string>
    <string name="profile_actionbar_title">Profile</string>
    <string name="profile_actionbar_details_title">Profile detail</string>
    <string name="invalid_height">Please enter valid height in (cms)</string>
    <string name="invalid_weight">Please enter valid weight in (kgs)</string>
    <string name="invalid_birth_date">Invalid birth date</string>

    <!-- Profile details -->
    <string name="profile_details_name">Name</string>
    <string name="profile_details_gender">Gender</string>
    <string name="profile_details_address">Address</string>
    <string name="profile_details_birth">Date of Birth</string>
    <string name="profile_details_ethnicity">Ethnicity</string>
    <string name="profile_details_height">Height (cm)</string>
    <string name="profile_details_weight">Weight (Kg)</string>
    <string name="profile_details_profile_name">Profile Name</string>
    <string name="profile_details_hint">-</string>
    <string name="profile_details_delete_profile">Delete Profile</string>
    <string name="profile_add_people_you_care">Add people you care</string>

    <string name="imageutil_camera_not_found">Camera application not found</string>

    <!-- Progress dialog -->
    <string name="progress_dialog_loading">Loading</string>
    <string name="progress_dialog_delete">Deleting</string>
    <string name="progress_dialog_save">Saving</string>
    <string name="progress_dialog_search">Searching</string>
    <string name="progress_dialog_create_account">Creating account</string>
    <string name="progress_dialog_logout">Logging out</string>
    <string name="progress_dialog_requesting">Requesting</string>
    <string name="processing">Processing, please wait...</string>

    <!-- Settings -->
    <string name="country">Country:</string>
    <string name="settings_email">Email:</string>
    <string name="settings_password">Password:</string>
    <string name="settings_country">Choose your country</string>
    <string name="settings_language">Choose your language</string>
    <string name="settings_about_app">About eCareZone</string>
    <string name="settings_action_check">Check</string>

    <!--country name list-->
    <string-array name="country_array">
        <item>China</item>
        <item>Denmark</item>
        <item>Finland</item>
        <item>Norway</item>
        <item>Sweden</item>
    </string-array>

    <string-array name="country_code_array">
        <item>CN</item>
        <item>DK</item>
        <item>FI</item>
        <item>NO</item>
        <item>SE</item>
    </string-array>

    <!--Languages name list-->
    <string-array name="language_array">
        <item>English</item>
        <item>Chinese</item>
        <item>Swedish</item>
        <item>Norwegian</item>
        <item>Finnish</item>
    </string-array>

    <string-array name="language_local_array">
        <item>en</item>
        <item>zh</item>
        <item>sv</item>
        <item>nn</item>
        <item>fi</item>
    </string-array>

    <string name="language_english">English</string>
    <string name="country_code">China</string>
    <string name="language_local_english">en</string>
    <string name="country_code_local">CN</string>


    <!-- doctor -->
    <string name="doctor_my_doctors">My doctors</string>
    <string name="doctor_recommended_doctors">Recommended doctors</string>
    <string name="doctor_name1">Dr. John Smith</string>
    <string name="doctor_name2">Dr. Steven Harris</string>
    <string name="doctor_name3">Dr. Song Yi</string>
    <string name="doctor_type1">Cardiologist</string>
    <string name="doctor_type2">General practitioner</string>
    <string name="doctor_available">Available</string>
    <string name="doctor_busy">Offline</string>
    <string name="doctor_idle">Idle</string>
    <string name="doctor_search">Search</string>
    <string name="doctor_search_hint_text">Search doctors</string>
    <string name="doctor_add_my_care_team">ADD TO MY CARE-TEAM</string>
    <string name="doctor_bio">Doctor bio</string>
    <string name="doctor_mycare_team">My Care-team</string>
    <string name="doctor_add_request_success">Your request has been sent to\nDr. %1$s</string>

    <!-- Appointment -->
    <string name="doctor_appointment">Make an appointment</string>
    <string name="doctor_appointment_header">Appointment</string>
    <string name="invalid_date">Please enter valid date</string>
    <string name="no_slots_open">There is a conflict with the requested appointment. Please try another slot</string>
    <string name="book">Book</string>
    <string name="thirty_mins">30 min</string>
    <string name="appointment_accepted">Appointment accepted</string>
    <string name="appointment_deleted">Appointment successfully cancelled</string>
    <string name="appointment_cannot_be_set">Appointment date cannot be set for a past time/date.</string>
    <string name="appointment_time">Time</string>
    <string name="patient_pending_request_accept">Accept</string>
    <string name="patient_pending_request_reject">Reject</string>
    <integer name="video_call_value">0</integer>
    <integer name="voip_call_value">1</integer>
    <string name="apointment_with_dr">Appointment with Dr.</string>
    <string name="you_have_an">You have an </string>
    <string name="call_appointment">call appointment</string>


    <!-- Home -->
    <string name="home_last_news_feed">The latest news feed</string>
    <string name="home_new_messages">New messages</string>
    <string name="home_user_message">New doctor recommanded for you.</string>
    <string name="home_see_profile">See Doctor\'s bio</string>

    <!-- Doctor details -->
    <string name="doctor_details_chat">Chat</string>
    <string name="doctor_details_video">Video call</string>
    <string name="doctor_details_voice">VoIP</string>
    <string name="doctor_details_chat_history">CHAT HISTORY</string>

    <!-- Video chat details -->
    <string name="video_chat_stop_btn_text">END CALL</string>
    <string name="video_incoming_call_answer_btn_text">ANSWER</string>
    <string name="video_incoming_call_decline_btn_text">DECLINE</string>
    <string name="video_incoming_call_title_text">Incoming call</string>


    <!-- Error -->
    <string name="error_user_login">Invalid username or password</string>
    <string name="error_user_registration">@string/error_user_login</string>
    <string name="error_password_less_than_registration">Password must be minimum 8 character</string>

    <string name="cancel">Cancel</string>
    <string name="welcome_button_send">SEND</string>

    <!-- dialog options for Gender in profile page -->
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- dialog options for picking the photo in profile page -->


    <string name="take_photo">Take photo</string>
    <string name="choose_photo">Choose photo</string>

    <string name="reset_password_email_hint">Your email</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_notification">New password will be sent \nto your registered email address</string>
    <string name="reset_password_error">Your email account is incorrect. Please try in if you are register user</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>

    <string name="gallery_chooser_select_picture">Choose from gallery</string>

    <!--Update Password-->
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">Confirm New Password</string>
    <string name="title_activity_update_password">UpdatePasswordActivity</string>
    <string name="title_activity_news"></string>
    <string name="password_mismatch">New password and confirm password fields do not match</string>
    <string name="registration_email">Your email</string>
    <string name="language">Language:</string>


    <!--Doctor Bio Fragment-->
    <string name="add_profile">Please add a profile </string>


</resources>
