<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_logo"
        android:padding="32dp"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:hint="@string/login_password"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/login_button_text"
        android:textStyle="bold"
        android:textColor="#ffffffff"
        android:background="#4a2e2627" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_forgot_password"
        android:textColor="#ff3f59ff"
        android:textStyle="bold"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="#3108220a" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_for_new_user"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <Button
        android:id="@+id/button_create_account"
        android:layout_width="195dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_create_account"
        android:textStyle="bold"
        android:background="#ff2b980d"
        android:textColor="#ffffffff" />
    #ff65ff34"
        android:focusableInTouchMode="false" />
</LinearLayout>