<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="14dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageview_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/login_logo" />

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/registration_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_black_color_selector" />

        <EditText
            android:id="@+id/edit_text_registration_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/arrow_right"
            android:hint="@string/registration_username"
            android:inputType="textEmailAddress"
            android:paddingRight="10dp" />


        <EditText
            android:id="@+id/edit_text_registration_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/arrow_right"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingRight="10dp" />


        <EditText
            android:id="@+id/country_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="false"
            android:hint="@string/settings_country"

            />

        <EditText
            android:id="@+id/spinner_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="false"

            android:hint="@string/settings_language"

            />

        <Button
            android:id="@+id/button_register"
            style="@style/EcareZoneBlueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:minWidth="220dp"
            android:text="@string/registration_create_account" />

        <CheckBox
            android:id="@+id/checkbox_registration_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/registration_agreement" />

        <TextView
            android:id="@+id/textview_registration_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/settings_about_app"
            android:textColor="@color/ecarezone_blue_dark"
            android:textSize="20sp"
            android:visibility="gone" />


    </LinearLayout>
</ScrollView>