<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/ecarezone_blue_dark"
        android:text="@string/welcome_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/welcome_message"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:background="@drawable/welcome_dialog">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/welcome_personal_profile"
            android:textColor="@color/ecarezone_blue_light"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:paddingBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_welcome_not_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_button_not_now"
                android:layout_margin="8dp"
                android:layout_weight="1"
                style="@style/EcareZoneGreenButton"
                />

            <Button
                android:id="@+id/button_welcome_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_button_ok"
                android:layout_margin="8dp"
                android:layout_weight="1"
                style="@style/EcareZoneGreenButton"
                />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>