<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_black_color_selector"
        android:id="@+id/textViewInfo"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/ecarezone_green_dark"
        android:id="@+id/textViewTime"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

    <Button
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_to_call"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:id="@+id/buttonTimeToCall"
        android:background="@drawable/circle_green_complete"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_date_n_time"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:id="@+id/buttonChangeTime"
        android:background="@drawable/circle_blue_complete"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcel_appointment"
        android:textColor="@android:color/white"
        android:id="@+id/buttonCancel"
        android:textAllCaps="false"
        android:background="@drawable/circle_red_complete"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>