<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/doctor_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/blue_rectangle_layout_selector"
    android:orientation="horizontal"
    android:padding="8dp">
    <com.ecarezone.android.patient.view.CircleImageView
        android:id="@+id/doctor_avatar"
        android:layout_width="@dimen/profile_thumbnail_edge_size"
        android:layout_height="@dimen/profile_thumbnail_edge_size"
        android:layout_gravity="center_vertical"
        android:layout_margin="4dp"
        android:src="@drawable/dr_john_photo"
        >
    </com.ecarezone.android.patient.view.CircleImageView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/doctor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/doctor_name1"
            android:textColor="@color/text_blue_color_selector"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/doctor_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/doctor_type1"
            android:textColor="@color/text_blue_color_selector"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:id="@+id/doctor_presence"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/circle_green" />

            <TextView
                android:id="@+id/doctor_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:text="@string/doctor_available"
                android:textColor="@color/text_gray_color_selector"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>