<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/doctor_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/ecarezone_blue_dark"
    android:orientation="horizontal"
    android:padding="8dp">

    <com.ecarezone.android.patient.view.CircleImageView
        android:id="@+id/doctor_avatar"
        android:layout_width="@dimen/profile_thumbnail_edge_size"
        android:layout_height="@dimen/profile_thumbnail_edge_size"
        android:layout_gravity="center_vertical"
        android:layout_margin="4dp"
        android:src="@drawable/dr_john_photo"></com.ecarezone.android.patient.view.CircleImageView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/doctor_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/doctor_name1"
                android:textColor="@color/ecarezone_semi_white_transparent"
                android:textSize="20sp"
                android:layout_weight="1"/>



        </LinearLayout>

        <TextView
            android:id="@+id/doctor_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/doctor_type1"
            android:textColor="@color/ecarezone_semi_white_transparent"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/doctor_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:text="@string/doctor_available"
                android:textColor="@color/ecarezone_green_dark_2"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>